# tabular-data-mcp

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  sample_autogen_agent.py
.github/workflows/: docker-build-push.yml
data/: sample_sales.csv  sample_sales.xlsx
