[project]
name = "tabular-data-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.1",
    "pandas",
    "openpyxl",
    "numpy",
    "matplotlib",
    "RestrictedPython>=7.5",
    "autogen-agentchat>=0.7.4",
    "autogen-ext[azure,openai]>=0.7.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

